Fixed Check Reservation page, Connected to Reservation and Room API

--- a/src/Components/CheckReservation/check.module.css
+++ b/src/Components/CheckReservation/check.module.css
@@ -1,25 +1,22 @@
-.main{
-    /*background: url('../../assets/Checkbg.jpg') no-repeat center center fixed; */
-    background-color: black;
-    position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
-    background-image: url('../../assets/Checkbg.jpg'); 
+.main {
+    background-image: url('../../assets/Checkbg.jpg');
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-position: center center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size:larger
+    position: static;
+    width: 100vw;
+    min-height: 120vh;
 }
-.boxy{
-    margin-top: 20%;
-    padding-top: 5%;
-    padding-bottom: 5%;
+
+.boxy {
+    margin-top: 8%;
+    padding: 2%;
     background: rgba(239, 241, 237, 0.9);
     border-radius: 18px;
-   margin-left: 10%;
+    margin-left: 10%;
     width: 100%;
-    height: 5%;
+}
 
+.reservationBox {
+    width: 500px;
 }
