--- a/src/Components/PaymentPage/Payment.module.css
+++ b/src/Components/PaymentPage/Payment.module.css
@@ -8,7 +8,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: normal;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 22px;
     color: #424242;
     margin-bottom: 0px;
     letter-spacing: 0.005em;
@@ -16,7 +16,7 @@ p {
 }
 
 .YourInfo {
-    margin-top: -5%;
+    margin-top: 0%;
 }
 
 .YourInfo .tf {
@@ -46,7 +46,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: normal;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 22px;
     line-height: 43px;
     letter-spacing: 0.005em;
 }
@@ -77,12 +77,11 @@ p {
 }
 
 .temp {
-    height: 20%;
-    width: 80%;
-    background: #fbf9f9;
+    /* height: 20%; */
+    /* width: 80%; */
+    /* background: #fbf9f9; */
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-radius: 10px;
-    margin-bottom: 0% !important;
 }
 
 .date {
@@ -106,6 +105,7 @@ p {
     font-size: small;
     height: 10%;
     width: 75%;
+    margin-top: 4%;
 }
 
 .policy p {
@@ -115,13 +115,4 @@ p {
 .mop {
     margin-left: 0%;
     width: 46%;
-}
-
-.img {
-    height: 98%;
-    width: 80%;
-    /* background-image: url('../../assets/temp_holder.png'); */
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
 }
