--- a/src/Components/PaymentPage/Payment.module.css
+++ b/src/Components/PaymentPage/Payment.module.css
@@ -19,6 +19,10 @@ p {
     margin-top: 0%;
 }
 
+.RedeemPoints {
+    margin-left: 7.2%;
+}
+
 .YourInfo .tf {
     margin-left: 1%;
     width: 80%;
